--- a/test_dockercompose/docker-compose.yml
+++ b/test_dockercompose/docker-compose.yml
@@ -1,6 +1,8 @@
-version: '2'
-services:
-   hello-world:
-      image:
-         hello-world:latest
+version: '3.9'
 
+services:
+  redis:
+    image: redis:6.2-alpine
+    ports:
+      - 6379:6379
+    command: redis-server --save 60 1 --requirepass MDNcVb924a --loglevel warning
