--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3.9'
 
 services:
+  db:
+    image: mysql:latest
+    environment:
+      MYSQL_DATABASE: 'tutorials'
+      MYSQL_USER: 'root'
+      MYSQL_PASSWORD: 'password'
+    ports:
+      - '3306:3306'
   front_end:
     # image: vladzaharia1505/logapp
     build:
@@ -8,8 +16,14 @@ services:
     ports:
       - 8080:8080
   back_end:
+    restart: always
     # image: vladzaharia1505/auth_api
-    build: 
+    build:
       context: auth_api
     ports:
       - 3000:3000
+    # environment:
+    #   - WAIT_HOSTS=mysql:3306
+    #   - WAIT_HOSTS_TIMEOUT=300
+    #   - WAIT_SLEEP_INTERVAL=30
+    #   - WAIT_HOST_CONNECT_TIMEOUT=30
