add nodemon for backed (autobuild)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,19 @@ services:
       context: LogApp
     ports:
       - 8080:8080
+
   back_end:
     restart: on-failure
-    image: vladzaharia1505/auth_api
+    # image: vladzaharia1505/auth_api
     build:
+      dockerfile: Dockerfile.dev
       context: auth_api
     ports:
       - 3000:3000
+    volumes:
+      - type: bind
+        source: auth_api/
+        target: /app/auth_api
     # environment:
     #   - WAIT_HOSTS=mysql:3306
     #   - WAIT_HOSTS_TIMEOUT=300
