edit volumes for front end (autobuilding)

--- a/LogApp/Dockerfile.dev
+++ b/LogApp/Dockerfile.dev
@@ -1,9 +1,10 @@
 # Filename: Dockerfile
 FROM node:18
-WORKDIR /home/wac/Documents/Callr/week_of_introduction_TCLR/LogApp
-
-RUN npm install
-RUN npm add js-confetti
+WORKDIR /app/LogApp
 
 EXPOSE 8080
-CMD ["npm", "run", "serve"]
+
+COPY entrypoint.sh /
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT [ "/entrypoint.sh" ]
